Fix one warning text in dark mode

--- a/app/assets/stylesheets/common/color.scss
+++ b/app/assets/stylesheets/common/color.scss
@@ -76,6 +76,10 @@
   }
 }
 
+.text-color-transparent {
+  color: transparent;
+}
+
 
 /* CUSTOM STUFF WITH COLORS */
 
